front: добавить работу с сессиями

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -64,3 +64,11 @@
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    .session-history-item {
+        &__delete-button {
+            display: block;
+        }
+    }
+}
