--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -65,6 +65,19 @@
     }
 }
 
+body:has(.dashboard) {
+    overflow: hidden;
+}
+
+.chat {
+    max-height: calc(100vh - 3.5rem);
+    overflow-y: scroll;
+
+    &__messages-area {
+        height: calc(100vh - 142px);
+    }
+}
+
 @media screen and (max-width: 768px) {
     .session-history-item {
         &__delete-button {
