--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -85,3 +85,10 @@ body:has(.dashboard) {
         }
     }
 }
+
+.wmde-markdown {
+    --color-canvas-default: 210 12.5% 96.86% !important;
+    --color-fg-default: 0 0% 3.9% !important;
+    --color-fg-default: 0 0% 3.9% !important;
+    --color-canvas-subtle: 210 12.5% 96.86% !important;
+}
