front: Добавить поддержку нескольких организаций

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -87,6 +87,12 @@ main:has(.chat) {
     overflow-y: scroll;
 }
 
+.organizations {
+    max-height: calc(100vh - 3.5rem);
+    overflow-y: scroll;
+    padding-bottom: 100px;
+}
+
 @media screen and (max-width: 768px) {
     .session-history-item {
         &__delete-button {
